@@ -22,6 +22,16 @@ Changelog
   data and header arguments) as positional arguments to the constructors of
   extension HDU classes. (r1274)
 
+- Fixed some tests that were failing on Windows--in this case the tests
+  themselves failed to close some temp files and Windows refused to delete them
+  while there were still open handles on them. (r1295)
+
+- Fixed an issue with floating point formatting in header values on Python 2.5
+  for Windows (and possibly other platforms).  The exponent was zero-padded to
+  3 digits; although the FITS standard makes no specification on this, the
+  formatting is now normalized to always pad the exponent to two digits.
+  (r1295)
+
 - Fixed a bug where long commentary cards (such as HISTORY and COMMENT) were
   broken into multiple CONTINUE cards.  However, commentary cards are not
   expected to be found in CONTINUE cards.  Instead these long cards are broken
